Added maps and linksw

--- a/attachments/index.html
+++ b/attachments/index.html
@@ -13,7 +13,7 @@
 <link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
 
     <link href="layout.css" rel="stylesheet" type="text/css" />
-    <script language="javascript" type="text/javascript" src="jquery-1.4.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="sammy/sammy.js"></script>
     <script language="javascript" type="text/javascript" src="site.js"></script>
   </head>
@@ -31,8 +31,9 @@
 	<h1>Crew</h1>
 
     <ul id="crew">
-        <li>
-            <h3><a href="https://secure.gravatar.com/avatar/727470ca24cb2dcd153eebaabcb8e217?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png"><img src="https://secure.gravatar.com/avatar/727470ca24cb2dcd153eebaabcb8e217?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png"></a>Luca Matteis</h3><ul><li class="irc">IRC nick: lmatteis</li><li class="twitter">Twitter: <a href="http://twitter.com/lmatteis" class="twitter-anywhere-user">@lmatteis</a></li><li class="github">GitHub: <a href="https://github.com/lmatteis">lmatteis</a></li><li class="location">Location: Rome, Italy<a href="http://maps.google.com/maps?&amp;q=Rome, Italy" title="Show it on a big map"><img src="http://maps.google.com/maps/api/staticmap?center=Rome, Italy&amp;zoom=14&amp;size=175x175&amp;maptype=roadmap&amp;sensor=false" width="175" height="175"></a></li><li class="occupation">Occupation: Front-end Developer</li><li class="birthday">Birthday: November 24, 1986</li></ul>
+        <li style="display: none" id="user">
+            <h3><a href="#"></a><span class="user">Luca Matteis</span></h3>
+	    <ul></ul>
         </li>
     </ul>
 
